vlib/v/checker/tests/fixed_array_conv.vv
arr := [2,3]!
mut p := voidptr(0)
p = arr
mut ip := &int(0)
ip = arr
_ = &int(arr)
_ = p
_ = ip

unsafe {
	_ = memdup(arr, 1)
	_ = tos(arr, 1)
	fn (p &int){}(arr)
}
